unpackaged/main/default/objects/HSE_Info__c/HSE_Info__c.object-meta.xml
<CustomObject>
    <label>HSE Info</label>
    <nameField>
        <displayFormat>HSE-{0000}</displayFormat>
        <label>HSE Ref. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HSE Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>