unpackaged/main/default/objects/HSE_Info__c/fields/Cumulative_Score__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Score__c</fullName>
    <label>Cumulative Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>