unpackaged/main/default/objects/HSE_Info__c/fields/Inspected_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspected_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspected Date</label>
    <type>DateTime</type>
</CustomField>