unpackaged/main/default/objects/HSE_Info__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Month</label>
    <length>20</length>
    <type>Text</type>
</CustomField>