unpackaged/main/default/objects/HSE_Info__c/fields/No_of_Fleets__c.field-meta.xml
<CustomField>
    <fullName>No_of_Fleets__c</fullName>
    <label>No. of Fleets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>