unpackaged/main/default/objects/HSE_Info__c/recordTypes/HSE_Induction.recordType-meta.xml
<RecordType>
    <fullName>HSE_Induction</fullName>
    <active>true</active>
    <label>HSE Induction</label>
</RecordType>