unpackaged/main/default/objects/HSE_Info__c/recordTypes/HSE_Inspections.recordType-meta.xml
<RecordType>
    <fullName>HSE_Inspections</fullName>
    <active>true</active>
    <label>HSE Inspections</label>
</RecordType>