unpackaged/main/default/objects/HSE_Info__c/recordTypes/HSE_Road_Safety_Workshop.recordType-meta.xml
<RecordType>
    <fullName>HSE_Road_Safety_Workshop</fullName>
    <active>true</active>
    <label>HSE Road Safety Workshop</label>
</RecordType>