unpackaged/main/default/objects/HSE_Info__c/recordTypes/HSE_Scores.recordType-meta.xml
<RecordType>
    <fullName>HSE_Scores</fullName>
    <active>true</active>
    <label>HSE Scores</label>
</RecordType>