unpackaged/main/default/objects/HSE_Info__c/recordTypes/IVMS_Devices.recordType-meta.xml
<RecordType>
    <fullName>IVMS_Devices</fullName>
    <active>true</active>
    <label>IVMS Devices</label>
</RecordType>