unpackaged/main/default/objects/HSE_Info__c/recordTypes/Spot_Check.recordType-meta.xml
<RecordType>
    <fullName>Spot_Check</fullName>
    <active>true</active>
    <label>Spot Check</label>
</RecordType>