unpackaged/main/default/objects/HSE_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Induction_Date__c</columns>
    <columns>Inspected_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>